Added magic number

--- a/index.html
+++ b/index.html
@@ -95,15 +95,11 @@
       </div>
     </header>
 
-    <!-- Page Content -->
-    <section class="content-section-a">
+    <section class="content-section-b">
 
       <div class="container">
         <div class="row">
-          <div class="col-lg-5 ml-auto order-lg-1">
-            <img class="img-fluid" src="img/GATLogo.png" alt="">
-          </div>
-          <div class="col-lg-5 mr-auto order-lg-2">
+          <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">
@@ -112,42 +108,66 @@
               <a target="_blank" href="https://github.com/css-lucas/GAT">Project Hermes 2.0</a>
             </h2>
             <p class="lead">
-              Produced by the <a href="http://css-lucas.com/">Laboratory for Unconventional Conflict Analysis and Simulation</a>, Hermes is a modeling and simulation platform for modeling strategic social interactions, built to provide scalable decision-making support to strategists, commanders, researchers, and educators.
+              Produced by the Laboratory for Unconventional Conflict Analysis and Simulation at <a href="https://ssri.duke.edu">Duke Social Science Research Institute</a>, Hermes is a modeling and simulation platform for modeling strategic social interactions, built to provide scalable decision-making support to strategists, commanders, researchers, and educators.
               <a href="https://github.com/css-lucas/GAT"><i class="fa fa-github"></i></a>
             </p>
+          </div>
+          <div class="col-md-4 mr-auto">
+            <img class="img-fluid" src="img/GATLogo.png" alt="">
           </div>
         </div>
       </div>
       <!-- /.container -->
     </section>
 
-    <section class="content-section-b">
+    <section class="content-section-a">
 
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-5 ml-auto">
+          <div class="col-md-4 ml-auto">
+            <img class="img-fluid" src="img/thisfits.png" style="max-width: 75%" alt="">
+          </div>
+          <div class="col-md-4 mr-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">Featured Project:<br><a target="_blank" href="http://thisfits.io/">Thisfits</a></h2>
               <p class="lead">To communalize the fashion process, the Thisfits team is building a streamlined social media app for real-time fashion <b>feedback</b>
               and <b>documentation</b>. Thisfits features social feeds where friends and strangers can collaborate on outfits and pieces for specific <b>occasions</b> and <b>series</b>.
-              <br></br>
-              Thisfits is currently in beta testing on iOS TestFlight with over 130 users. Sign up for the beta at <a href="http://thisfits.io">thisfits.io</a>.
             </p>
             </p>
-          </div>
-          <div class="col-md-4 mr-auto">
-            <img class="img-fluid" src="img/thisfits.png" style="max-width: 75%" alt="">
           </div>
         </div>
-
-
       </div>
       <!-- /.container -->
 
     </section>
     <!-- /.content-section-b -->
+
+     <!-- Page Content -->
+    <section class="content-section-b">
+
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5 ml-auto">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">
+              Featured Project:
+              <br>
+              <a target="_blank" href="https://magicnumberip.com/">Magic Number</a>
+            </h2>
+            <p class="lead">
+              Magic Number identifies trends that emerge from USPTO patent data, using machine learning modeling techniques to cluster, categorize and forecast patent trends in a number of business sectors.
+            </p>
+          </div>
+          <div class="col-md-4 mr-auto">
+            <img class="img-fluid" src="img/patent_forecast.png" alt="">
+          </div>
+        </div>
+      </div>
+      <!-- /.container -->
+    </section>
 
     <section class="content-section-a">
 
@@ -156,7 +176,7 @@
           <div class="col-lg-5 mr-auto order-lg-2">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">Featured Project:<br><a target="_blank" href="http://www.iwphys.org/5/">IWP5</a></h2>
+            <h2 class="section-heading">Featured Project:<br><a target="_blank" href="http://www.iwphys.org">IWP5</a></h2>
             <p class="lead">
               Interactive Web Physics Version 5 is an HTML5/JavaScript/D3 physics simulation applet built for classroom use. Build and visualize physics simulations using parametric and Euler's calculations.
               <a href="https://github.com/ntbrock/iwphys"><i class="fa fa-github"></i></a>
@@ -185,7 +205,7 @@
             <p class="lead">
               Ryan Steed is a software engineer, quantitative modeler, data scientist, subject matter analyst, project manager, and student.
               He graduated from the North Carolina School of Science and Mathematics in 2017 and is currently studying Economics and Computer Science at George Washington University.
-              He is the Technology Fellow at the <a target="_touch" href="http://gwinnovates.com">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
+              He is the Technology Fellow at the <a target="_touch" href="http://dub.works">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
             </p>
           </div>
           <div class="col-lg-5 mr-auto order-lg-1">
