Added Virtual Jane

--- a/index.html
+++ b/index.html
@@ -95,6 +95,80 @@
       </div>
     </header>
 
+
+    <section class="content-section-a">
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 ml-auto">
+            <img class="img-fluid" src="img/jane-goodall.jpg" alt="">
+          </div>
+          <div class="col-md-4 mr-auto">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">
+              Featured Project:
+              <br>
+              <a target="_blank" href="http://virtualjane.gwic.io">Virtual Jane</a>
+            </h2>
+            <p class="lead">
+              The Virtual Jane project tells the story of Jane Goodall (primatologist, conservationist, and childhood hero) in a virtual reality mobile application. The <a href="http://gwic.io">GW Innovation Center</a> is collaborating with the Jane Goodall Institute to create an immersive educational and recreation experience for Jane's expansive audience. 
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- /.container -->
+    </section>
+
+    <section class="content-section-b">
+
+      <div class="container">
+
+        <div class="row">
+          <div class="col-md-4 ml-auto">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">Featured Project:<br><a target="_blank" href="http://thisfits.io/">Thisfits</a></h2>
+              <p class="lead">To communalize the fashion process, the Thisfits team is building a streamlined social media app for real-time fashion <b>feedback</b>
+              and <b>documentation</b>. Thisfits features social feeds where friends and strangers can collaborate on outfits and pieces for specific <b>occasions</b> and <b>series</b>.
+            </p>
+            </p>
+          </div>
+          <div class="col-md-4 mr-auto">
+            <img class="img-fluid" src="img/thisfits.png" style="max-width: 75%" alt="">
+          </div>
+        </div>
+      </div>
+      <!-- /.container -->
+
+    </section>
+    <!-- /.content-section-b -->
+
+    <!-- Page Content -->
+    <section class="content-section-a">
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5 ml-auto">
+            <img class="img-fluid" src="img/patent_forecast.png" alt="">
+          </div>
+          <div class="col-md-4 mr-auto">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">
+              Featured Project:
+              <br>
+              <a target="_blank" href="https://magicnumberip.com/">Magic Number</a>
+            </h2>
+            <p class="lead">
+              Magic Number identifies trends that emerge from USPTO patent data, using machine learning modeling techniques to cluster, categorize and forecast patent trends in a number of business sectors.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- /.container -->
+    </section>
+
     <section class="content-section-b">
 
       <div class="container">
@@ -114,55 +188,6 @@
           </div>
           <div class="col-md-4 mr-auto">
             <img class="img-fluid" src="img/GATLogo.png" alt="">
-          </div>
-        </div>
-      </div>
-      <!-- /.container -->
-    </section>
-
-    <section class="content-section-a">
-
-      <div class="container">
-
-        <div class="row">
-          <div class="col-md-4 ml-auto">
-            <img class="img-fluid" src="img/thisfits.png" style="max-width: 75%" alt="">
-          </div>
-          <div class="col-md-4 mr-auto">
-            <hr class="section-heading-spacer">
-            <div class="clearfix"></div>
-            <h2 class="section-heading">Featured Project:<br><a target="_blank" href="http://thisfits.io/">Thisfits</a></h2>
-              <p class="lead">To communalize the fashion process, the Thisfits team is building a streamlined social media app for real-time fashion <b>feedback</b>
-              and <b>documentation</b>. Thisfits features social feeds where friends and strangers can collaborate on outfits and pieces for specific <b>occasions</b> and <b>series</b>.
-            </p>
-            </p>
-          </div>
-        </div>
-      </div>
-      <!-- /.container -->
-
-    </section>
-    <!-- /.content-section-b -->
-
-     <!-- Page Content -->
-    <section class="content-section-b">
-
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-5 ml-auto">
-            <hr class="section-heading-spacer">
-            <div class="clearfix"></div>
-            <h2 class="section-heading">
-              Featured Project:
-              <br>
-              <a target="_blank" href="https://magicnumberip.com/">Magic Number</a>
-            </h2>
-            <p class="lead">
-              Magic Number identifies trends that emerge from USPTO patent data, using machine learning modeling techniques to cluster, categorize and forecast patent trends in a number of business sectors.
-            </p>
-          </div>
-          <div class="col-md-4 mr-auto">
-            <img class="img-fluid" src="img/patent_forecast.png" alt="">
           </div>
         </div>
       </div>
@@ -205,7 +230,7 @@
             <p class="lead">
               Ryan Steed is a software engineer, quantitative modeler, data scientist, subject matter analyst, project manager, and student.
               He graduated from the North Carolina School of Science and Mathematics in 2017 and is currently studying Economics and Computer Science at George Washington University.
-              He is the Technology Fellow at the <a target="_touch" href="http://dub.works">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
+              He is a Technology Fellow and project manager at the <a target="_touch" href="http://gwic.io">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
             </p>
           </div>
           <div class="col-lg-5 mr-auto order-lg-1">
@@ -229,7 +254,7 @@
             <h2>Contact</h2>
             <div class="col-md-2">
               <br />
-              <p>ryansteed@gwu.edu</p>
+              <p>steed11r@gmail.com</p>
             </div>
           </div>
           <div class="col-lg-6 my-auto">
