Changed contact email

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <h2>Contact</h2>
             <div class="col-md-2">
               <br />
-              <p>steed11r@gmail.com</p>
+              <p>ryan@rbsteed.com</p>
             </div>
           </div>
           <div class="col-lg-6 my-auto">
