added VJ github

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
+            <a class="nav-link" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
@@ -96,7 +99,7 @@
     </header>
 
 
-    <section class="content-section-a">
+    <section id="portfolio" class="content-section-a">
 
       <div class="container">
         <div class="row">
@@ -112,7 +115,7 @@
               <a target="_blank" href="http://virtualjane.gwic.io">Virtual Jane</a>
             </h2>
             <p class="lead">
-              The Virtual Jane project tells the story of Jane Goodall (primatologist, conservationist, and childhood hero) in a virtual reality mobile application. The <a href="http://gwic.io">GW Innovation Center</a> is collaborating with the Jane Goodall Institute to create an immersive educational and recreation experience for Jane's expansive audience. 
+              The Virtual Jane project tells the story of Jane Goodall (primatologist, conservationist, and childhood hero) in a virtual reality mobile application. The <a href="http://gwic.io">GW Innovation Center</a> is collaborating with the Jane Goodall Institute to create an immersive educational and recreation experience. <a href="https://github.com/GWIC/virtualjane-animations"><i class="fa fa-github"></i></a>
             </p>
           </div>
         </div>
@@ -254,7 +257,7 @@
             <h2>Contact</h2>
             <div class="col-md-2">
               <br />
-              <p>ryan@rbsteed.com</p>
+              <p><a href="mailto:ryan@rbsteed.com">ryan@rbsteed.com</a></p>
             </div>
           </div>
           <div class="col-lg-6 my-auto">
