--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="container" id="home">
         <div class="intro-message">
           <h1>Ryan Steed</h1>
-          <h3>Personal Portfolio</h3>
+          <!-- <h3>Personal Portfolio</h3> -->
           <hr class="intro-divider">
           <ul class="list-inline intro-social-buttons">
             <li class="list-inline-item">
