--- a/index.html
+++ b/index.html
@@ -293,6 +293,10 @@
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
+            <a href="#portfolio">Portfolio</a>
+          </li>
+          <li class="footer-menu-divider list-inline-item">&sdot;</li>
+          <li class="list-inline-item">
             <a href="#about">About</a>
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
