Minor tweaks to CSS

--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-109682218-1');
-
-    ga('set', 'userId', 'USER_ID'); // Set the user ID using signed-in user_id.
   </script>
 
 
@@ -253,15 +251,17 @@
       <div id="contact" class="container">
 
         <div class="row">
-          <div class="col-lg-6 my-auto">
+          <div class="col-lg-3 ml-auto">
             <h2>Contact</h2>
-            <div class="col-md-2">
-              <br />
-              <p><a href="mailto:ryan@rbsteed.com">ryan@rbsteed.com</a></p>
-            </div>
           </div>
-          <div class="col-lg-6 my-auto">
+          <div class="col-lg-5 mr-auto">
             <ul class="list-inline banner-social-buttons">
+              <li class="list-inline-item">
+                <a href="mailto:webmaster@rbsteed.com" class="btn btn-secondary btn-lg">
+                  <i class="fa fa-envelope fa-fw"></i>
+                  <span class="network-name">Email</span>
+                </a>
+              </li>
               <li class="list-inline-item">
                 <a href="https://github.com/ryansteed" class="btn btn-secondary btn-lg">
                   <i class="fa fa-github fa-fw"></i>
