--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </p>
           </div>
           <div class="col-lg-4 mr-auto order-lg-1">
-            <img class="img-fluid" src="img/RyanSteed_Headshot.jpg" alt="">
+            <img class="img-fluid headshot" src="img/RyanSteed_Headshot.jpg" alt="">
           </div>
 
         </div>
