--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
               About
             </h2>
             <p class="lead">
-              Ryan Steed is a software engineer, quantitative modeler, data scientist, subject matter analyst, project manager, and student.
-              He graduated from the North Carolina School of Science and Mathematics in 2017 and is currently studying Economics and Computer Science at George Washington University.
-              He is a Technology Fellow and project manager at the <a target="_touch" href="http://gwic.io">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
+              Ryan Steed is a data engineer, project manager, and student.
+              He is studying Computational Economics at The George Washington University after graduating from the North Carolina School of Science and Mathematics in 2017.
+              He is also a Technology Fellow and project manager at the <a target="_touch" href="http://gwic.io">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
             </p>
           </div>
           <div class="col-lg-4 mr-auto order-lg-1">
