Added written work section

--- a/index.html
+++ b/index.html
@@ -222,7 +222,56 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-5 ml-auto">
+          <div class="col-lg-9" style="margin: auto auto;">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">
+              Written Work
+            </h2>
+            <div class="container">
+              <ul class="list-inline list-docs">
+                <!-- <li class="list-inline-item">
+                  <a href="docs/democratic-peace.pdf">How Institutions Encourage Cooperation: A Critique of the Contracting Theory of Democratic Peace</a>
+                </li> -->
+                <!-- <li class="footer-menu-divider list-inline-item">&sdot;</li> -->
+                <li>
+                  <a href="docs/descartes-spinoza.pdf">Sufficient Reason and Infinite Regress: Causal Consistency in Descartes and Spinoza</a> &sdot; 2018
+                </li>
+                <li>
+                  <a href="docs/mill.pdf">Constructive Intolerance: A Critique of Laissez-Faire Liberalism</a> &sdot; 2018
+                </li>
+                <li>
+                  <a href="docs/stevens.pdf">Wallace Stevens' Emancipated Individual: A World of One's Own</a> &sdot; 2018
+                </li>
+                <li>
+                  <a href="docs/plato-popper.pdf">From Plato to Popper: Platonic Forms in Modern Science and Quantum Theory</a> &sdot; 2017
+                </li>
+                <li>
+                  <a href="docs/drag.pdf">The Derivative Relational Attribute Graph Model for Link Prediction</a> &sdot; 2017
+                </li>
+                <li>
+                  <a href="docs/event-coding.pdf">A Deep Learning Approach for CAMEO Coding</a> &sdot; 2017 &sdot; Presented at International Studies Association South Annual Conference, Orlando.
+                </li>
+              </ul>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+      <!-- /.container -->
+
+    </section>
+
+    <section class="content-section-a" id="about">
+
+      <div class="container">
+
+        <div class="row">
+          <div id="headshot-column" class="col-md-4 ml-auto">
+            <img class="img-fluid headshot" src="img/RyanSteed_Headshot.jpg" alt="">
+          </div>
+          <div class="col-lg-5 mr-auto order-lg-1">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">
@@ -234,10 +283,6 @@
               He is also a Technology Fellow and project manager at the <a target="_touch" href="http://gwic.io">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
             </p>
           </div>
-          <div class="col-lg-4 mr-auto order-lg-1">
-            <img class="img-fluid headshot" src="img/RyanSteed_Headshot.jpg" alt="">
-          </div>
-
         </div>
 
       </div>
