Added Data MASTER proposal

--- a/index.html
+++ b/index.html
@@ -238,6 +238,9 @@
                   <a href="docs/descartes-spinoza.pdf">Sufficient Reason and Infinite Regress: Causal Consistency in Descartes and Spinoza</a> &sdot; 2018
                 </li>
                 <li>
+                  <a href="docs/datamaster.pdf">Data MASTER Research Proposal: The Effects of Patent Filing Acceleration on the Evolution of Technological Innovation</a> &sdot; 2018
+                </li>
+                <li>
                   <a href="docs/mill.pdf">Constructive Intolerance: A Critique of Laissez-Faire Liberalism</a> &sdot; 2018
                 </li>
                 <li>
@@ -251,6 +254,9 @@
                 </li>
                 <li>
                   <a href="docs/event-coding.pdf">A Deep Learning Approach for CAMEO Coding</a> &sdot; 2017 &sdot; Presented at International Studies Association South Annual Conference, Orlando.
+                </li>
+                <li>
+                  <a href="https://www.isanet.org/Portals/0/Media/Conferences/SouthOrlando2017/South%20Orlando%202017%20-%20Full%20Program.pdf">The Practice and Promise of Open Source Intelligence and Computational Security Studies</a> &sdot; 2017 &sdot; Presented at International Studies Association South Annual Conference, Orlando.
                 </li>
               </ul>
             </div>
