--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">
-              Written Work
+              Other Work
             </h2>
             <div class="container">
               <ul class="list-inline list-docs">
@@ -234,6 +234,9 @@
                   <a href="docs/democratic-peace.pdf">How Institutions Encourage Cooperation: A Critique of the Contracting Theory of Democratic Peace</a>
                 </li> -->
                 <!-- <li class="footer-menu-divider list-inline-item">&sdot;</li> -->
+                <li>
+                  <a href="https://docs.google.com/presentation/d/13QDErzc_KZ0DlESk-4F9B1j1b6dArURwWvsCKMGWgr4/edit?usp=sharing">ML Document Classification</a> &sdot; 2018
+                </li>
                 <li>
                   <a href="docs/descartes-spinoza.pdf">Sufficient Reason and Infinite Regress: Causal Consistency in Descartes and Spinoza</a> &sdot; 2018
                 </li>
@@ -253,10 +256,10 @@
                   <a href="docs/drag.pdf">The Derivative Relational Attribute Graph Model for Link Prediction</a> &sdot; 2017
                 </li>
                 <li>
-                  <a href="docs/event-coding.pdf">A Deep Learning Approach for CAMEO Coding</a> &sdot; 2017 &sdot; Presented at International Studies Association South Annual Conference, Orlando.
+                  <a href="https://www.isanet.org/Portals/0/Media/Conferences/SouthOrlando2017/South%20Orlando%202017%20-%20Full%20Program.pdf">The Practice and Promise of Open Source Intelligence and Computational Security Studies</a> &sdot; 2017 &sdot; Presented at International Studies Association South Annual Conference, Orlando.
                 </li>
                 <li>
-                  <a href="https://www.isanet.org/Portals/0/Media/Conferences/SouthOrlando2017/South%20Orlando%202017%20-%20Full%20Program.pdf">The Practice and Promise of Open Source Intelligence and Computational Security Studies</a> &sdot; 2017 &sdot; Presented at International Studies Association South Annual Conference, Orlando.
+                  <a href="docs/event-coding.pdf">A Deep Learning Approach for CAMEO Coding</a> &sdot; 2017 &sdot; Presented at ISA South Conference, Orlando.
                 </li>
               </ul>
             </div>
