Final directory strucutre

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                   <a href="docs/descartes-spinoza.pdf">Sufficient Reason and Infinite Regress: Causal Consistency in Descartes and Spinoza</a> &sdot; 2018
                 </li>
                 <li>
-                  <a href="docs/datamaster.pdf">Data MASTER Research Proposal: The Effects of Patent Filing Acceleration on the Evolution of Technological Innovation</a> &sdot; 2018
+                  <a href="docs/datamaster/proposal.pdf">Data MASTER Research Proposal: The Effects of Patent Filing Acceleration on the Evolution of Technological Innovation</a> &sdot; 2018
                 </li>
                 <li>
                   <a href="docs/mill.pdf">Constructive Intolerance: A Critique of Laissez-Faire Liberalism</a> &sdot; 2018
