--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 </li> -->
                 <!-- <li class="footer-menu-divider list-inline-item">&sdot;</li> -->
                 <li>
-                  <a href="https://docs.google.com/presentation/d/13QDErzc_KZ0DlESk-4F9B1j1b6dArURwWvsCKMGWgr4/edit?usp=sharing">ML Document Classification</a> &sdot; 2018
+                  <a href="docs/ml-document-classification.html">ML Document Classification</a> &sdot; 2018
                 </li>
                 <li>
                   <a href="docs/descartes-spinoza.pdf">Sufficient Reason and Infinite Regress: Causal Consistency in Descartes and Spinoza</a> &sdot; 2018
