Added star skirmish

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-md-4 ml-auto">
+          <div class="col-md-6 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">Featured Project:<br><a target="_blank" href="http://thisfits.io/">Thisfits</a></h2>
@@ -154,12 +154,10 @@
           <div class="col-md-5 ml-auto">
             <img class="img-fluid" src="img/patent_forecast.png" alt="">
           </div>
-          <div class="col-md-4 mr-auto">
+          <div class="col-md-5 mr-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">
-              Featured Project:
-              <br>
               <a target="_blank" href="https://magicnumberip.com/">Magic Number</a>
             </h2>
             <p class="lead">
@@ -179,17 +177,15 @@
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">
-              Featured Project:
-              <br>
-              <a target="_blank" href="https://github.com/css-lucas/GAT">Project Hermes 2.0</a>
+              <a target="_blank" href="http://rbsteed.com/star-skirmish/">Star Skirmish</a>
             </h2>
             <p class="lead">
-              Produced by the Laboratory for Unconventional Conflict Analysis and Simulation at <a href="https://ssri.duke.edu">Duke Social Science Research Institute</a>, Hermes is a modeling and simulation platform for modeling strategic social interactions, built to provide scalable decision-making support to strategists, commanders, researchers, and educators.
-              <a href="https://github.com/css-lucas/GAT"><i class="fa fa-github"></i></a>
+              Star Wars meets Galaga in this arcade-style 2D space shooter, built with Java Swing GUI. Fly your X-Wing across a beautiful starscape, blasting the Death Star's TIE fighters. Turn on your sound to hear the original NAMCO Galaga soundtrack and sound effects.
+              <a href="https://github.com/ryansteed/star-skirmish"><i class="fa fa-github"></i></a>
             </p>
           </div>
-          <div class="col-md-4 mr-auto">
-            <img class="img-fluid" src="img/GATLogo.png" alt="">
+          <div class="col-md-5 mr-auto">
+            <img class="img-fluid" src="img/starskirmish.png" alt="">
           </div>
         </div>
       </div>
@@ -203,7 +199,8 @@
           <div class="col-lg-5 mr-auto order-lg-2">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">Featured Project:<br><a target="_blank" href="http://www.iwphys.org">IWP5</a></h2>
+            <h2 class="section-heading">
+            <a target="_blank" href="http://www.iwphys.org">IWP5</a></h2>
             <p class="lead">
               Interactive Web Physics Version 5 is an HTML5/JavaScript/D3 physics simulation applet built for classroom use. Build and visualize physics simulations using parametric and Euler's calculations.
               <a href="https://github.com/ntbrock/iwphys"><i class="fa fa-github"></i></a>
@@ -230,28 +227,13 @@
               Other Work
             </h2>
             <div class="container">
+              <h5>Data Science</h5>
               <ul class="list-inline list-docs">
-                <!-- <li class="list-inline-item">
-                  <a href="docs/democratic-peace.pdf">How Institutions Encourage Cooperation: A Critique of the Contracting Theory of Democratic Peace</a>
-                </li> -->
-                <!-- <li class="footer-menu-divider list-inline-item">&sdot;</li> -->
                 <li>
-                  <a href="docs/ml-document-classification.html">ML Document Classification</a> &sdot; 2018
-                </li>
-                <li>
-                  <a href="docs/descartes-spinoza.pdf">Sufficient Reason and Infinite Regress: Causal Consistency in Descartes and Spinoza</a> &sdot; 2018
+                  <a href="docs/ml-document-classification.html">ML Document Classification</a> &sdot; 2018 &sdot; Tech talk presented at GWU ACM.
                 </li>
                 <li>
                   <a href="docs/datamaster/proposal.pdf">Data MASTER Research Proposal: The Effects of Patent Filing Acceleration on the Evolution of Technological Innovation</a> &sdot; 2018
-                </li>
-                <li>
-                  <a href="docs/mill.pdf">Constructive Intolerance: A Critique of Laissez-Faire Liberalism</a> &sdot; 2018
-                </li>
-                <li>
-                  <a href="docs/stevens.pdf">Wallace Stevens' Emancipated Individual: A World of One's Own</a> &sdot; 2018
-                </li>
-                <li>
-                  <a href="docs/plato-popper.pdf">From Plato to Popper: Platonic Forms in Modern Science and Quantum Theory</a> &sdot; 2017
                 </li>
                 <li>
                   <a href="docs/drag.pdf">The Derivative Relational Attribute Graph Model for Link Prediction</a> &sdot; 2017
@@ -261,6 +243,21 @@
                 </li>
                 <li>
                   <a href="docs/event-coding.pdf">A Deep Learning Approach for CAMEO Coding</a> &sdot; 2017 &sdot; Presented at ISA South Conference, Orlando.
+                </li>
+              </ul>
+              <h5>Philosophy</h5>
+              <ul class="list-inline list-docs">
+                <li>
+                  <a href="docs/descartes-spinoza.pdf">Sufficient Reason and Infinite Regress: Causal Consistency in Descartes and Spinoza</a> &sdot; 2018
+                </li>
+                <li>
+                  <a href="docs/mill.pdf">Constructive Intolerance: A Critique of Laissez-Faire Liberalism</a> &sdot; 2018
+                </li>
+                <li>
+                  <a href="docs/stevens.pdf">Wallace Stevens' Emancipated Individual: A World of One's Own</a> &sdot; 2018
+                </li>
+                <li>
+                  <a href="docs/plato-popper.pdf">From Plato to Popper: Platonic Forms in Modern Science and Quantum Theory</a> &sdot; 2017
                 </li>
               </ul>
             </div>
