--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
               <h5>Data Science</h5>
               <ul class="list-inline list-docs">
                 <li>
+                  <a href="docs/bias-proposal.pdf">Sociocultural Bias in Machine Learning Image Classification</a> &sdot; 2018
+                </li>
+                <li>
+                  <a href="docs/religious-growth.pdf">Effect of Religious Diversity on Growth</a> &sdot; 2018
+                </li>
+                <li>
                   <a href="docs/ml-document-classification.html">ML Document Classification</a> &sdot; 2018 &sdot; Tech talk presented at GWU ACM.
                 </li>
                 <li>
