--- a/index.html
+++ b/index.html
@@ -227,19 +227,22 @@
               Other Work
             </h2>
             <div class="container">
-              <h5>Data Science</h5>
+              <h5>Current Research</h5>
               <ul class="list-inline list-docs">
                 <li>
                   <a href="docs/bias-proposal.pdf">Sociocultural Bias in Machine Learning Image Classification</a> &sdot; 2018
                 </li>
                 <li>
+                  <a href="docs/datamaster/proposal.pdf">The Effects of Patent Filing Acceleration on the Evolution of Technological Innovation</a> &sdot; 2018
+                </li>
+              </ul>
+              <h5>Data Science</h5>
+              <ul class="list-inline list-docs">
+                <li>
                   <a href="docs/religious-growth.pdf">Effect of Religious Diversity on Growth</a> &sdot; 2018
                 </li>
                 <li>
                   <a href="docs/ml-document-classification.html">ML Document Classification</a> &sdot; 2018 &sdot; Tech talk presented at GWU ACM.
-                </li>
-                <li>
-                  <a href="docs/datamaster/proposal.pdf">Data MASTER Research Proposal: The Effects of Patent Filing Acceleration on the Evolution of Technological Innovation</a> &sdot; 2018
                 </li>
                 <li>
                   <a href="docs/drag.pdf">The Derivative Relational Attribute Graph Model for Link Prediction</a> &sdot; 2017
