Fixed about button

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </section>
     <!-- /.content-section-a -->
 
-    <section class="content-section-b" id="about">
+    <section class="content-section-b" id="other-work">
 
       <div class="container">
 
