Removed link to proposal

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <div id="current" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                   <ul class="list-inline list-docs">
                     <li>
-                      <a href="docs/bias-proposal.pdf">Sociocultural Bias in Machine Learning Image Classification</a> &sdot; 2018
+                      <a>Sociocultural Bias in Machine Learning Image Classification</a> &sdot; 2018
                     </li>
                     <li>
                       <a href="docs/datamaster/proposal.pdf">The Effects of Patent Filing Acceleration on the Evolution of Technological Innovation</a> &sdot; 2018
