--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             </h2>
 
             <p class="lead">
-              Ryan's research interests span data-driven public policy, fairness and bias in AI, and philosophy. He seeks to apply computing technology to the advancement of humanity.
+              Ryan's research interests span data-driven public policy, fairness and bias in AI, and philosophy. He seeks to apply computing technology to societal advancement.
             </p>
 
             <div class="accordion" id="work">
