--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-lg-5 ml-auto order-lg-2">
+          <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">
@@ -231,7 +231,7 @@
               <a href="https://github.com/ntbrock/iwphys"><i class="fa fa-github"></i></a>
             </p>
           </div>
-          <div class="col-lg-5 mr-auto order-lg-1">
+          <div class="col-lg-5 mr-auto">
             <img class="img-fluid" src="img/iwp5.png" alt="">
           </div>
         </div>
@@ -260,7 +260,7 @@
               <div class="card">
                 <!-- <button class="btn btn-link" > -->
                 <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#current" aria-expanded="true" aria-controls="current">
-                  <h5 class="mb-0">
+                  <h5 class="mb-0" data-toggle="collapse" data-target="#current" aria-expanded="true" aria-controls="current">
                       Current
                   </h5>
                 </div>
@@ -280,7 +280,7 @@
 
               <div class="card">
                 <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#datasci" aria-expanded="false" aria-controls="datasci">
-                  <h5 class="mb-0">
+                  <h5 class="mb-0" data-toggle="collapse" data-target="#datasci" aria-expanded="false" aria-controls="datasci">
                       Data Science
                   </h5>
                 </div>
@@ -311,7 +311,7 @@
 
               <div class="card">
                 <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#phil" aria-expanded="false" aria-controls="phil">
-                  <h5 class="mb-0">
+                  <h5 class="mb-0" data-toggle="collapse" data-target="#phil" aria-expanded="false" aria-controls="phil">
                       Philosophy
                   </h5>
                 </div>
