--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
               </a>
             </li>
             <li class="list-inline-item">
+              <a href="docs/steed-cv.pdf" class="btn btn-secondary btn-lg"
+                data-toggle="tooltip"
+                title="Curriculum Vitae."
+                data-placement="bottom">
+                <i class="far fa-file-alt fa-fw"></i>
+                <span class="network-name">CV</span>
+              </a>
+            </li>
+            <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/steedryan/" class="btn btn-secondary btn-lg white-tooltip"
               data-toggle="tooltip"
               title="Professional profile and resumé."
@@ -253,7 +262,7 @@
             </h2>
 
             <p class="lead">
-              Ryan's research interests span data-driven public policy, fairness and bias in AI, and philosophy. He seeks to apply computing technology to societal advancement.
+              Ryan's research interests span data-driven public policy, fairness and bias in AI, and philosophy. He seeks to apply computing technology to societal advancement. <a href="docs/steed-cv.pdf"><i class="far fa-file-alt fa-fw"></i></a>
             </p>
 
             <div class="accordion" id="work">
