:bug: Removed CV button due to sizing issues

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <span class="network-name">Github</span>
               </a>
             </li>
-            <li class="list-inline-item">
+            <!-- <li class="list-inline-item">
               <a href="docs/steed-cv.pdf" class="btn btn-secondary btn-lg"
                 data-toggle="tooltip"
                 title="Curriculum Vitae."
@@ -94,7 +94,7 @@
                 <i class="far fa-file-alt fa-fw"></i>
                 <span class="network-name">CV</span>
               </a>
-            </li>
+            </li> -->
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/steedryan/" class="btn btn-secondary btn-lg white-tooltip"
               data-toggle="tooltip"
