:bug: Mobile accordion bug

--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
             <div class="accordion" id="work">
               <div class="card">
                 <!-- <button class="btn btn-link" > -->
-                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#current" aria-expanded="true" aria-controls="current">
-                  <h5 class="mb-0" data-toggle="collapse" data-target="#current" aria-expanded="true" aria-controls="current">
+                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#current" href="#current" aria-expanded="true" aria-controls="current">
+                  <h5 class="mb-0">
                       Current
                   </h5>
                 </div>
@@ -288,8 +288,8 @@
               </div>
 
               <div class="card">
-                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#datasci" aria-expanded="false" aria-controls="datasci">
-                  <h5 class="mb-0" data-toggle="collapse" data-target="#datasci" aria-expanded="false" aria-controls="datasci">
+                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#datasci" href="#datasci" aria-expanded="false" aria-controls="datasci">
+                  <h5 class="mb-0">
                       Data Science
                   </h5>
                 </div>
@@ -319,8 +319,8 @@
               </div>
 
               <div class="card">
-                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#phil" aria-expanded="false" aria-controls="phil">
-                  <h5 class="mb-0" data-toggle="collapse" data-target="#phil" aria-expanded="false" aria-controls="phil">
+                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#phil" href="#phil" aria-expanded="false" aria-controls="phil">
+                  <h5 class="mb-0">
                       Philosophy
                   </h5>
                 </div>
