--- a/index.html
+++ b/index.html
@@ -262,8 +262,15 @@
             </h2>
 
             <p class="lead">
-              Ryan's research interests span data-driven public policy, fairness and bias in AI, and philosophy. He seeks to apply computing technology to societal advancement. <a href="docs/steed-cv.pdf"><i class="far fa-file-alt fa-fw"></i></a>
+              Ryan's research interests span data-driven public policy, fairness and bias in AI, and philosophy. He seeks to apply computing technology to societal advancement.
             </p>
+
+            <a href="docs/steed-cv.pdf" class="btn btn-secondary btn-lg" style="margin: 0px auto 10px auto">
+              <i class="far fa-file-alt fa-fw"></i>
+              <span class="network-name">Curriculum Vitae</span>
+            </a>
+
+            <hr>
 
             <div class="accordion" id="work">
               <div class="card">
