--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta property="og:image:width" content="100" />
     <meta property="og:image:height" content="100" />
     <meta name="twitter:card" content="summary_large_image">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 
     <title>Ryan Steed - Portfolio</title>
 
